Update teamplate mail send code for forgot password

--- a/Backend-Chat/src/main/resources/application.properties
+++ b/Backend-Chat/src/main/resources/application.properties
@@ -42,6 +42,7 @@ spring.servlet.multipart.max-request-size=150MB
 #Mail
 mail.username=
 mail.password=
+mail.fromName=Chat Apllication
 
 #Swagger
 springdoc.api-docs.enabled=true
