--- a/Backend-Chat/src/main/resources/application.properties
+++ b/Backend-Chat/src/main/resources/application.properties
@@ -24,9 +24,9 @@ jwt.access.expiration_time=1440
 jwt.refresh.expiration_time=1440
 
 #Cloudinary
-cloudinary.cloud_name=dnwqonyib
-cloudinary.api_key=614346698165818
-cloudinary.api_secret=J1brlIklgTSu745BNQ4mMwGNe0c
+cloudinary.cloud_name=
+cloudinary.api_key=
+cloudinary.api_secret=
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
@@ -40,9 +40,9 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=150MB
 
 #Mail
-mail.username=duongboygh10@gmail.com
-mail.password=eovhmhghzkifwjdi
-mail.fromName=Chat Apllication
+mail.username=
+mail.password=
+mail.fromName=
 
 #Swagger
 springdoc.api-docs.enabled=true
